--- a/index.html
+++ b/index.html
@@ -4,12 +4,113 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/styles.css">
     <title> BuzzQuiz </title>
 </head>
 <body>
-    
+    <header>
+        <div class="textoHeader">
+            <p> BuzzQuiz </p>
+        </div>
+    </header>
+    <main>
+        <div class="criadorDeQuiz off">
+            <div class="box">
+                <p> Você não criou nenhum quizz ainda :( </p>
+                <button> Criar Quizz </button>
+            </div>
+        </div>
+        <div class="seusQuizzes">
+            <div class="texto">
+                <p> Seus Quizes </p>
+            </div>
+            <div class="quizzesBox">
+                <div class="quiz">
+                    <div class="imagemQuiz">
+                        <img src="Imagens/Figma/hogwarts.png" alt="Imagem de Hogwarts"/>
+                    </div>
+                    <div class="textoQuiz">
+                        <p>O quão Potterhead é você ?</p>
+                    </div>
+                </div>
+                <div class="quiz">
+                    <div class="imagemQuiz">
+                        <img src="Imagens/Figma/deferiascomoex.png" alt="Imagem de participantes do De férias com o Ex"/>
+                    </div>
+                    <div class="textoQuiz">
+                        <p>É ex-BBB ou ex-De férias com o Ex ?</p>
+                    </div>
+                </div>
+                <div class="quiz">
+                    <div class="imagemQuiz">
+                        <img src="Imagens/Figma/hogwarts.png" alt="Imagem de Hogwarts"/>
+                    </div>
+                    <div class="textoQuiz">
+                        <p>O quão Potterhead é você ?</p>
+                    </div>
+                </div>
+            </div>     
+        </div>
+        <div class="todosOsQuizzes">
+            <div class="texto">
+                <p> Todos os Quizzes </p>
+            </div>
+            <div class="quizzesBox">
+                <div class="quiz">
+                    <div class="imagemQuiz">
+                        <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
+                    </div>
+                    <div class="textoQuiz">
+                        <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
+                    </div>
+                </div>
+                <div class="quiz">
+                    <div class="imagemQuiz">
+                        <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
+                    </div>
+                    <div class="textoQuiz">
+                        <p>O quão de boas você é?</p>
+                    </div>  
+                </div>
+                <div class="quiz">
+                    <div class="imagemQuiz">
+                        <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
+                    </div>
+                    <div class="textoQuiz">
+                        <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
+                    </div>
+                </div>
+                <div class="quiz">
+                    <div class="imagemQuiz">
+                        <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
+                    </div>
+                    <div class="textoQuiz">
+                        <p>O quão de boas você é?</p>
+                    </div>  
+                </div>
+                <div class="quiz">
+                    <div class="imagemQuiz">
+                        <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
+                    </div>
+                    <div class="textoQuiz">
+                        <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
+                    </div>
+                </div>
+                <div class="quiz">
+                    <div class="imagemQuiz">
+                        <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
+                    </div>
+                    <div class="textoQuiz">
+                        <p>O quão de boas você é?</p>
+                    </div>  
+                </div>
+            </div>  
+        </div>
+    </main>
     <script src="JS/scripts.js"></script>
 </body>
 </html>
