--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles1.css">
+    <link rel="stylesheet" href="CSS/styles2.css">
+    <link rel="stylesheet" href="CSS/styles3.css">
     <title> BuzzQuiz </title>
 </head>
 <body>
@@ -18,98 +20,116 @@
         </div>
     </header>
     <main>
-        <div class="criadorDeQuiz off">
-            <div class="box">
-                <p> Você não criou nenhum quizz ainda :( </p>
-                <button> Criar Quizz </button>
+        <!-- Início da tela 1-->
+        <div class="boxTela1">
+            <div class="criadorDeQuiz">
+                <div class="box">
+                    <p> Você não criou nenhum quizz ainda :( </p>
+                    <button> Criar Quizz </button>
+                </div>
+            </div>
+            <div class="seusQuizzes off">
+                <div class="texto">
+                    <p> Seus Quizes </p>
+                </div>
+                <div class="quizzesBox">
+                    <div class="quiz">
+                        <div class="imagemQuiz">
+                            <img src="Imagens/Figma/hogwarts.png" alt="Imagem de Hogwarts"/>
+                        </div>
+                        <div class="textoQuiz">
+                            <p>O quão Potterhead é você ?</p>
+                        </div>
+                    </div>
+                    <div class="quiz">
+                        <div class="imagemQuiz">
+                            <img src="Imagens/Figma/deferiascomoex.png" alt="Imagem de participantes do De férias com o Ex"/>
+                        </div>
+                        <div class="textoQuiz">
+                            <p>É ex-BBB ou ex-De férias com o Ex ?</p>
+                        </div>
+                    </div>
+                    <div class="quiz">
+                        <div class="imagemQuiz">
+                            <img src="Imagens/Figma/hogwarts.png" alt="Imagem de Hogwarts"/>
+                        </div>
+                        <div class="textoQuiz">
+                            <p>O quão Potterhead é você ?</p>
+                        </div>
+                    </div>
+                </div>     
+            </div>
+            <div class="todosOsQuizzes">
+                <div class="texto">
+                    <p> Todos os Quizzes </p>
+                </div>
+                <div class="quizzesBox">
+                    <div class="quiz">
+                        <div class="imagemQuiz">
+                            <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
+                        </div>
+                        <div class="textoQuiz">
+                            <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
+                        </div>
+                    </div>
+                    <div class="quiz">
+                        <div class="imagemQuiz">
+                            <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
+                        </div>
+                        <div class="textoQuiz">
+                            <p>O quão de boas você é?</p>
+                        </div>  
+                    </div>
+                    <div class="quiz">
+                        <div class="imagemQuiz">
+                            <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
+                        </div>
+                        <div class="textoQuiz">
+                            <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
+                        </div>
+                    </div>
+                    <div class="quiz">
+                        <div class="imagemQuiz">
+                            <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
+                        </div>
+                        <div class="textoQuiz">
+                            <p>O quão de boas você é?</p>
+                        </div>  
+                    </div>
+                    <div class="quiz">
+                        <div class="imagemQuiz">
+                            <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
+                        </div>
+                        <div class="textoQuiz">
+                            <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
+                        </div>
+                    </div>
+                    <div class="quiz">
+                        <div class="imagemQuiz">
+                            <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
+                        </div>
+                        <div class="textoQuiz">
+                            <p>O quão de boas você é?</p>
+                        </div>  
+                    </div>
+                </div>  
+            </div>
+        <div class="boxTela2">
+            <div class="tituloDoQuiz">
+                <div class="imagemDoTitulo">
+
+                </div>
+                <div class>
+
+                </div>
             </div>
         </div>
-        <div class="seusQuizzes">
-            <div class="texto">
-                <p> Seus Quizes </p>
-            </div>
-            <div class="quizzesBox">
-                <div class="quiz">
-                    <div class="imagemQuiz">
-                        <img src="Imagens/Figma/hogwarts.png" alt="Imagem de Hogwarts"/>
-                    </div>
-                    <div class="textoQuiz">
-                        <p>O quão Potterhead é você ?</p>
-                    </div>
-                </div>
-                <div class="quiz">
-                    <div class="imagemQuiz">
-                        <img src="Imagens/Figma/deferiascomoex.png" alt="Imagem de participantes do De férias com o Ex"/>
-                    </div>
-                    <div class="textoQuiz">
-                        <p>É ex-BBB ou ex-De férias com o Ex ?</p>
-                    </div>
-                </div>
-                <div class="quiz">
-                    <div class="imagemQuiz">
-                        <img src="Imagens/Figma/hogwarts.png" alt="Imagem de Hogwarts"/>
-                    </div>
-                    <div class="textoQuiz">
-                        <p>O quão Potterhead é você ?</p>
-                    </div>
-                </div>
-            </div>     
+        <div class="boxTela3">
+
         </div>
-        <div class="todosOsQuizzes">
-            <div class="texto">
-                <p> Todos os Quizzes </p>
-            </div>
-            <div class="quizzesBox">
-                <div class="quiz">
-                    <div class="imagemQuiz">
-                        <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
-                    </div>
-                    <div class="textoQuiz">
-                        <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
-                    </div>
-                </div>
-                <div class="quiz">
-                    <div class="imagemQuiz">
-                        <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
-                    </div>
-                    <div class="textoQuiz">
-                        <p>O quão de boas você é?</p>
-                    </div>  
-                </div>
-                <div class="quiz">
-                    <div class="imagemQuiz">
-                        <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
-                    </div>
-                    <div class="textoQuiz">
-                        <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
-                    </div>
-                </div>
-                <div class="quiz">
-                    <div class="imagemQuiz">
-                        <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
-                    </div>
-                    <div class="textoQuiz">
-                        <p>O quão de boas você é?</p>
-                    </div>  
-                </div>
-                <div class="quiz">
-                    <div class="imagemQuiz">
-                        <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
-                    </div>
-                    <div class="textoQuiz">
-                        <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
-                    </div>
-                </div>
-                <div class="quiz">
-                    <div class="imagemQuiz">
-                        <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
-                    </div>
-                    <div class="textoQuiz">
-                        <p>O quão de boas você é?</p>
-                    </div>  
-                </div>
-            </div>  
         </div>
+        
+        <!-- Fim da tela 1 -->
     </main>
     <script src="JS/scripts.js"></script>
 </body>
