Adicionados alguns ajustes finos a estrutura do site

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <main>
         <!-- Início da tela 1-->
         <div class="boxTela1">
-            <div class="criadorDeQuiz">
+            <div class="criadorDeQuiz off">
                 <div class="box">
                     <p> Você não criou nenhum quizz ainda :( </p>
                     <button> Criar Quizz </button>
                 </div>
             </div>
-            <div class="seusQuizzes off">
+            <div class="seusQuizzes">
                 <div class="texto">
                     <p> Seus Quizes </p>
                 </div>
@@ -116,14 +116,14 @@
             </div>
         </div>
         <!-- Fim da tela 1 -->
-        <div class="boxTela2">
+        <div class="boxTela2 off">
             <div class="paginaDeUmQuiz">
                 <div class="bannerDoQuiz">
                     <div class="imagemDoBanner">
-    
+                        <img src="Imagens/Próprias/rickemorty.jpeg"/>
                     </div>
                     <div class="tituloDoBanner">
-    
+                        <p> O quão Potterhead é você ? </p>
                     </div>
                 </div>
                 <div class="perguntaDoQuiz">
