--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <main>
         <!-- Início da tela 1-->
         <div class="boxTela1 off">
-            <div class="criadorDeQuiz off">
+            <div class="criadorDeQuiz">
                 <div class="box">
                     <p> Você não criou nenhum quizz ainda :( </p>
                     <button> Criar Quizz </button>
                 </div>
             </div>
-            <div class="seusQuizzes">
+            <div class="seusQuizzes off">
                 <div class="texto">
                     <p> Seus Quizes </p>
                 </div>
@@ -117,60 +117,70 @@
         </div>
         <!-- Fim da tela 1 -->
         <div class="boxTela2">
-            <div class="paginaDeUmQuiz">
-                <div class="bannerDoQuiz">
-                <!--<div class="imagemDoBanner">
-                                        <img src="Imagens/Figma/Tela2/hogwartsbanner.png"/>
-                    </div>-->
-                    <div class="tituloDoBanner">
-                        <p> O quão Potterhead é você ? </p>
-                    </div>
-                </div>
-                <div class="perguntaDoQuiz">
-                    <div class="pergunta">
-                        <p>Em qual animal Olho-Tonto Moody transfigurou Molfoy</p>
-                    </div>
-                    <div class="respostasDoQuiz">
-                        <div class="resposta">
-                            <div class="imagemDaResposta">
-                                <img src="Imagens/Figma/Tela2/gato.png"/>
-                            </div>
-                            <div class="textoDaResposta">
-                                <p>Gato</p>
-                            </div>
-                        </div>
-                        <div class="resposta">
-                            <div class="imagemDaResposta">
-                                <img src="Imagens/Figma/Tela2/rato.png"/>
-                            </div>
-                            <div class="textoDaResposta">
-                                <p>Rato</p>
-                            </div>
-                        </div>
-                        <div class="resposta">
-                            <div class="imagemDaResposta">
-                                <img src="Imagens/Figma/Tela2/sapo.png">
-                            </div>
-                            <div class="textoDaResposta">
-                                <p>Sapo</p>
-                            </div>
-                        </div>
-                        <div class="resposta">
-                            <div class="imagemDaResposta">
-                                <img src="Imagens/Figma/Tela2/gamba.png"/>
-                            </div>
-                            <div class="textoDaResposta">
-                                <p>Mustela Putorius Furo (O Furão)</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="mensagemFinalDoQuiz">
-    
+            <div class="bannerDoQuiz">
+                <div class="textoDoBanner">
+                    <p>O quão Potterhead é você ?</p>
                 </div>
             </div>
-            <button class="reiniciarQuiz"></button>
-            <button class="voltarPraHome"></button>
+            <div class="estruturaDoQuiz">
+                <div class="textoDoQuiz azul">
+                    <p>Em qual animal Olho-Tonto Moody transfigurou Malfoy</p>
+                </div>
+                <div class="respostaS">
+                    <div class="resposta">
+                        <img src="Imagens/Figma/Tela2/gato.png" alt="Imagem de um gatinho"/>
+                        <p> Gatinho </p>
+                    </div>
+                    <div class="resposta">
+                        <img src="Imagens/Figma/Tela2/rato.png" alt="Imagem de um gatinho"/>
+                        <p> Rato Malandro </p>
+                    </div>
+                    <div class="resposta">
+                        <img src="Imagens/Figma/Tela2/gamba.png" alt="Imagem de um gatinho"/>
+                        <p> Mustela Putorius Furo </p>
+                    </div>
+                    <div class="resposta">
+                        <img src="Imagens/Figma/Tela2/sapo.png" alt="Imagem de um gatinho"/>
+                        <p> Sãpao cabuloso </p>
+                    </div>
+                </div>
+            </div>
+            <div class="estruturaDoQuiz">
+                <div class="textoDoQuiz roxo">
+                    <p>Qual dos objetos abaixo NÃO é uma horcrux</p>
+                </div>
+                <div class="respostaS">
+                    <div class="resposta">
+                        <img src="Imagens/Figma/Tela2/potter.png" alt="Imagem de um gatinho"/>
+                        <p> Gatinho </p>
+                    </div>
+                    <div class="resposta">
+                        <img src="Imagens/Figma/Tela2/livro.png" alt="Imagem de um gatinho"/>
+                        <p> Rato Malandro </p>
+                    </div>
+                    <div class="resposta">
+                        <img src="Imagens/Figma/Tela2/anel.png" alt="Imagem de um gatinho"/>
+                        <p> Mustela Putorius Furo </p>
+                    </div>
+                    <div class="resposta">
+                        <img src="Imagens/Figma/Tela2/aguia.png" alt="Imagem de um gatinho"/>
+                        <p> Sãpao cabuloso </p>
+                    </div>
+                </div>
+            </div>
+            <div class="mensagemFinalDoQuiz">
+                <div class="textoDoQuiz laranja">
+                    <p>88% de acerto: Você é praticamente um aluno de Hogwarts</p>
+                </div>
+                <img src="Imagens/Figma/Tela2/bruxaocabuloso.png"/>
+                <div class="mensagemFinal">
+                    <p>Parabéns Potterhead! Bem-vindx a Hogwarts, aproveite o loop infinito de comida e clique no botão abaixo para usar o vira-tempo e reiniciar este teste.</p>
+                </div>
+            </div>
+            <div class="footerDoQuiz">
+                <button class="reiniciarQuiz">Reiniciar Quizz</button>
+                <button class="voltarPraHome">Voltar pra home</button>
+            </div>
         </div>
         <div class="boxTela3">
         </div>
