--- a/index.html
+++ b/index.html
@@ -20,20 +20,25 @@
         </div>
     </header>
     <main>
-        <!-- Início da tela 1-->
-        <div class="boxTela1 off">
+        <!------------------------ Início da tela 1 ------------------------>
+        <div class="boxTela1">
             <div class="criadorDeQuiz">
                 <div class="box">
                     <p> Você não criou nenhum quizz ainda :( </p>
                     <button> Criar Quizz </button>
                 </div>
             </div>
-            <div class="seusQuizzes off">
-                <div class="texto">
-                    <p> Seus Quizes </p>
+            <div class="seusQuizzes offTela1">
+                <div class="box">
+                    <div class="texto">
+                        <p> Seus Quizes </p>
+                    </div>
+                    <div class="icon">
+                        <ion-icon name="add-circle"></ion-icon>
+                    </div>
                 </div>
                 <div class="quizzesBox">
-                    <div class="quiz">
+                    <div class="quiz" onclick="alternarDaTela1ParaATela2(this)">
                         <div class="imagemQuiz">
                             <img src="Imagens/Figma/hogwarts.png" alt="Imagem de Hogwarts"/>
                         </div>
@@ -41,7 +46,7 @@
                             <p>O quão Potterhead é você ?</p>
                         </div>
                     </div>
-                    <div class="quiz">
+                    <div class="quiz" onclick="alternarDaTela1ParaATela2(this)">
                         <div class="imagemQuiz">
                             <img src="Imagens/Figma/deferiascomoex.png" alt="Imagem de participantes do De férias com o Ex"/>
                         </div>
@@ -49,7 +54,7 @@
                             <p>É ex-BBB ou ex-De férias com o Ex ?</p>
                         </div>
                     </div>
-                    <div class="quiz">
+                    <div class="quiz" onclick="alternarDaTela1ParaATela2(this)">
                         <div class="imagemQuiz">
                             <img src="Imagens/Figma/hogwarts.png" alt="Imagem de Hogwarts"/>
                         </div>
@@ -63,60 +68,12 @@
                 <div class="texto">
                     <p> Todos os Quizzes </p>
                 </div>
-                <div class="quizzesBox">
-                    <div class="quiz">
-                        <div class="imagemQuiz">
-                            <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
-                        </div>
-                        <div class="textoQuiz">
-                            <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
-                        </div>
-                    </div>
-                    <div class="quiz">
-                        <div class="imagemQuiz">
-                            <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
-                        </div>
-                        <div class="textoQuiz">
-                            <p>O quão de boas você é?</p>
-                        </div>  
-                    </div>
-                    <div class="quiz">
-                        <div class="imagemQuiz">
-                            <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
-                        </div>
-                        <div class="textoQuiz">
-                            <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
-                        </div>
-                    </div>
-                    <div class="quiz">
-                        <div class="imagemQuiz">
-                            <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
-                        </div>
-                        <div class="textoQuiz">
-                            <p>O quão de boas você é?</p>
-                        </div>  
-                    </div>
-                    <div class="quiz">
-                        <div class="imagemQuiz">
-                            <img src="Imagens/Figma/Simpsons.png" alt="Imagem dos Simpsons"/>
-                        </div>
-                        <div class="textoQuiz">
-                            <p>Acerte os personagens corretos dos Simpsons e prove seu amor!</p>
-                        </div>
-                    </div>
-                    <div class="quiz">
-                        <div class="imagemQuiz">
-                            <img src="Imagens/Figma/Preguiça.png" alt="Imagem de uma preguiça"/>
-                        </div>
-                        <div class="textoQuiz">
-                            <p>O quão de boas você é?</p>
-                        </div>  
-                    </div>
-                </div>  
+                <div class="quizzesBox teste">
+                </div>
             </div>
         </div>
-        <!-- Fim da tela 1 -->
-        <div class="boxTela2">
+        <!------------------------ Fim da tela 1 ------------------------>
+        <div class="boxTela2 offTela2">
             <div class="bannerDoQuiz">
                 <div class="textoDoBanner">
                     <p>O quão Potterhead é você ?</p>
@@ -145,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div class="estruturaDoQuiz">
+            <!--<div class="estruturaDoQuiz">
                 <div class="textoDoQuiz roxo">
                     <p>Qual dos objetos abaixo NÃO é uma horcrux</p>
                 </div>
@@ -180,11 +137,14 @@
             <div class="footerDoQuiz">
                 <button class="reiniciarQuiz">Reiniciar Quizz</button>
                 <button class="voltarPraHome">Voltar pra home</button>
-            </div>
+            </div>-->
         </div>
-        <div class="boxTela3">
+        <div class="boxTela3 off">
         </div>
     </main>
+
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="JS/script1.js"></script>
     <script src="JS/script2.js"></script>
     <script src="JS/script3.js"></script>
